--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE
 include README.md
-recursive-include stcalander/templates *
-recursive-include stcalander/ *
+recursive-include stcalander *
+
